Move Modality kinds and clean up